<resources>
    <string name="add">Add</string>
    <string name="app_name">crushr</string>
    <string name="apply_configs">Apply new configs</string>
    <string name="bg_color">Background Color</string>
    <string name="Enter_key_action">Enter Key Action</string>
    <string name="color_hint">e.g. #AARRGGBB or #RRGGBB</string>
    <string name="configs_title">Configurations</string>
    <string name="edit">Edit</string>
    <string name="empty_task_error">Please enter a task first</string>
    <string name="empty_task_hint">This too shall pass.</string>
    <string name="font_size">Font Size</string>
    <string name="font_style">Font Style</string>
    <string name="fontStyle_normal">Normal</string>
    <string name="fontStyle_bold">Bold</string>
    <string name="fontStyle_italic">Italic</string>
    <string name="fontStyle_boldItalic">Bold Italic</string>
    <string name="github_url">https://github.com/iamrasel/crushr</string>
    <string name="new_line">New Line</string>
    <string name="pinned_task">Pinned task</string>
    <string name="preview">Text\nPreview</string>
    <string name="primary_color">Primary Color</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="share">Share</string>
    <string name="text_color">Text Color</string>
    <string name="text_copied_toast">Text copied to clipboard</string>
    <string name="twitter_class">com.twitter.android.PostActivity</string>
    <string name="twitter_package">com.twitter.android</string>
    <string name="twitter_url">https://twitter.com/intent/tweet?text=</string>
    <string name="type_here_hint">type here…</string>
    <string name="unpin">Unpin</string>
    <string name="widget_bg_color">Widget\'s Background Color</string>
</resources>
