<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:layout_gravity="center_vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/crushr_logo"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:src="@drawable/logo"/>
        
        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_settings"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/container_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"/>

    </ScrollView>

    <EditText
        android:id="@+id/new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/type_here_hint"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:padding="7dp"
        android:autofillHints="@null"
        android:inputType="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end">
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:background="@drawable/btn_pressed"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="3dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:background="@drawable/btn_pressed"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="3dp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>